# cw_1_app

./: .gitignore  Cargo.toml  LICENSE
.cargo/: config.toml
app/: Cargo.toml
app/src/: app.rs  main.rs  utils.rs
app/src/model/: account.rs  config.rs  database.rs  mod.rs  request.rs  user.rs
app/src/view/: auth.rs  main.rs  mod.rs  setup.rs
app/src/view/table/: mod.rs
cli/: Cargo.toml
cli/src/: app.rs  main.rs  opt.rs
core/: Cargo.toml
core/src/: extensions.rs  generator.rs  lib.rs  traits.rs  utils.rs
core/src/functions/: audit_log_func.rs  mod.rs  revenue_for_period.rs  update_time_func.rs
core/src/procedures/: index_prices.rs  mod.rs
core/src/tables/: account.rs  audit_log.rs  component.rs  component_kind.rs  labor_contract.rs  manufacturer.rs  mod.rs  order.rs  order_component.rs  order_service.rs  person.rs  phone.rs  phone_model.rs  position.rs  service.rs  service_component.rs  service_phone_model.rs  staff.rs  supplier.rs  supply.rs  supply_contract.rs  warehouse.rs  warehouse_supply.rs
core/src/triggers/: audit_log.rs  mod.rs  update_time.rs
core/src/types/: account_role.rs  account_status.rs  color.rs  contract_status.rs  metatime.rs  mod.rs  order_status.rs  staff_status.rs  supply_status.rs
core/src/views/: component_beautified.rs  mod.rs  order_service_beautified.rs  phone_beautified.rs  service_phone_model_beautified.rs  staff_beautified.rs  warehouse_beautified.rs
src/: app.rs  main.rs
src/models/: auth.rs
