[package]
name = "cw_app"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17"
serde = "1.0"

[profile.final]
inherits = "release"
strip = true
lto = true
codegen-units = 1
