[package]
name = "cw-app"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cw-core = { path = "../core" }

eframe = "0.17"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
