[package]
name = "cw-app"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
license = "Apache-2.0"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cw-core = { path = "../core" }

anyhow = "1.0"
egui_extras = "0.18"
eframe = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18", features = ["rt-multi-thread"] }
tracing = { version = "0.1", default-features = true, features = ["std"] }
tracing-subscriber = "0.3"
