[package]
name = "cw-cli"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"

[dependencies]
cw-core = { path = "../core" }

anyhow = "1.0"
clap = { version = "3.1", features = ["derive", "env"] }
tokio = { version = "1.17", features = ["macros", "rt"] }
