[package]
name = "cw-cli"
description = "Utility for fast operations with database"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
license = "Apache-2.0"
version = "0.1.4-beta.1"
edition = "2021"

[dependencies]
cw-core = { path = "../core" }

anyhow = "1.0"
futures = "0.3"
clap = { version = "3.1", features = ["env"] }
serde_json = "1.0"
tokio = { version = "1.18", features = ["macros", "rt"] }
