[package]
name = "cw-core"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

# [features]
# gen = ["isocountry"]

[dependencies]
anyhow = "1.0"
isocountry = { version = "0.3" }
sqlx = { version = "0.5", default-features = false, features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
rand = "0.8"
