[package]
name = "cw-core"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"

# [features]
# gen = ["isocountry"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
isocountry = { version = "0.3" }
mac_address = { version = "1.1", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
sqlx = { version = "0.5", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "bigdecimal",
    "mac_address",
    "uuid",
] }
rand = "0.8"
