[package]
name = "cw-core"
authors = ["Timur Israpilov <very1fake.coder@gmail.com>"]
license = "Apache-2.0"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.4"
bigdecimal = { version = "0.2.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
fake = "2.4"
mac_address = { version = "1.1", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
sqlx = { version = "0.5", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "bigdecimal",
    "mac_address",
    "uuid",
] }
rand = "0.8"
serde = "1.0"
